--- a/survey.html
+++ b/survey.html
@@ -3,7 +3,7 @@
 <title>Redirecting</title>
 <script type="text/javascript">
  
-var urls = new Array("http://www.google.com/", "http://www.yahoo.com/");
+var urls = new Array("http://llorban.net/forms/view.php?id=13378", "http://llorban.net/forms/view.php?id=16753");
  
 function redirect()
 {
